--- a/client/src/components/landingPage/landingPage.css
+++ b/client/src/components/landingPage/landingPage.css
@@ -2,6 +2,22 @@
   background-image: url("./images/landingpagebg.jpg");
   background-position: center; 
 }
+
+.productDescriptionContainer {
+  height: 600px;
+  background :#3a3a3a; 
+  color: #e8e8e8;
+}
+
+.pDContent {
+  padding-top: 50px;
+  font-weight: 400;
+}
+.pDContent h2 {
+  font-size: 40px;
+  text-align: center;
+}
+
 .container {
     max-width: 960px;
   }
@@ -83,4 +99,21 @@
   }
   
   .overflow-hidden { overflow: hidden; }
-  
+
+  @media (max-width: 1330px) {
+    .mobile-btn-hdr-signup {
+      position: absolute;
+      right: 40px !important;
+    }
+    .mobile-btn-hdr-login {
+      position: absolute;
+      right: 150px !important;
+    }
+    .mobile-btn-hdr-title {
+      text-align: left !important;
+    }
+    .pDContent h2 {
+      font-size: 35px;
+      text-align: center;
+    }
+  }
